Add routes to sidebar and welcome page

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -134,6 +134,9 @@
                 <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
               </li>
               <li>
+                <a routerLink="/auth/user/request/saving-history" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Historial de solicitudes</a>
+              </li>
+              <li>
                 <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar Saldos de Ahorros</a>
               </li>
             </ul>
@@ -286,6 +289,9 @@
           </li>
           <li>
             <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
+          </li>
+          <li>
+            <a routerLink="/auth/user/request/saving-history" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Historial de solicitudes</a>
           </li>
           <li>
             <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos de ahorros</a>
