--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -44,6 +44,7 @@
                     <h5 class="card-title">Conoce los Servicios de Ahorro</h5>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/saving">Solicita tu ahorro aquí</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/saving-withdrawal">Solicita tu retiro de ahorro aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/saving-history">Ver el historial de solicitudes</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings/balance">Validar saldos de ahorros</a>
                 </div>
             </div>
