--- a/front/src/app/components/private/user/saving-request-history/saving-request-history.component.html
+++ b/front/src/app/components/private/user/saving-request-history/saving-request-history.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <h1>Historial de Solicitudes</h1>
 
     <h5 class="mt-3">Solicitudes de Ahorros</h5>
