Change row style to datatable

--- a/front/src/app/components/private/user/credit-balance/credit-balance.component.html
+++ b/front/src/app/components/private/user/credit-balance/credit-balance.component.html
@@ -5,34 +5,34 @@
             <p-table [value]="creditsBalance" [tableStyle]="{'min-width': '60rem'}">
                 <ng-template pTemplate="header">
                     <tr>
-                        <th pSortableColumn="idLineaCredito" style="width:30%">
+                        <th pSortableColumn="idLineaCredito" style="width:50%">
                             Línea Crédito <p-sortIcon field="idLineaCredito" />
                         </th>
-                        <th pSortableColumn="valorSolicitado" style="width:10%">
+                        <th pSortableColumn="valorSolicitado">
                             Valor Crédito <p-sortIcon field="valorSolicitado" />
                         </th>
-                        <th pSortableColumn="cuotaQuincenal" style="width:10%">
+                        <th pSortableColumn="cuotaQuincenal">
                             Cuota Quincenal <p-sortIcon field="cuotaQuincenal" />
                         </th>
-                        <th pSortableColumn="cuotasTotales" style="width:5%">
+                        <th pSortableColumn="cuotasTotales" style="width:2%">
                             Cuotas Totales <p-sortIcon field="cuotasTotales" />
                         </th>
-                        <th pSortableColumn="cuotasPendientes" style="width:5%">
+                        <th pSortableColumn="cuotasPendientes" style="width:2%">
                             Cuotas Pendientes <p-sortIcon field="cuotasPendientes" />
                         </th>
-                        <th pSortableColumn="cuotaActual" style="width:5%">
+                        <th pSortableColumn="cuotaActual" style="width:2%">
                             Cuotas Facturadas <p-sortIcon field="cuotaActual" />
                         </th>
-                        <th pSortableColumn="valorPagado" style="width:10%">
+                        <th pSortableColumn="valorPagado">
                             Total Pagado <p-sortIcon field="valorPagado" />
                         </th>
-                        <th pSortableColumn="valorSaldo" style="width:10%">
+                        <th pSortableColumn="valorSaldo">
                             Saldo por Pagar <p-sortIcon field="valorSaldo" />
                         </th>
-                        <th pSortableColumn="fechaCorte" style="width:10%">
+                        <th pSortableColumn="fechaCorte">
                             Fecha Corte <p-sortIcon field="fechaCorte" />
                         </th>
-                        <th pSortableColumn="actualizadoEl" style="width:10%">
+                        <th pSortableColumn="actualizadoEl">
                             Fecha Actualización Información <p-sortIcon field="actualizadoEl" />
                         </th>
                     </tr>
