--- a/front/src/app/components/private/user/saving-balance/saving-balance.component.html
+++ b/front/src/app/components/private/user/saving-balance/saving-balance.component.html
@@ -8,16 +8,16 @@
                         <th pSortableColumn="idLineaAhorro" style="width:30%">
                             Línea Ahorro <p-sortIcon field="idLineaAhorro" />
                         </th>
-                        <th pSortableColumn="ahorroQuincenal" style="width:30%">
+                        <th pSortableColumn="ahorroQuincenal">
                             Ahorro Quincenal <p-sortIcon field="ahorroQuincenal" />
                         </th>
-                        <th pSortableColumn="valorSaldo" style="width:30%">
+                        <th pSortableColumn="valorSaldo">
                             Saldo Ahorro <p-sortIcon field="valorSaldo" />
                         </th>
-                        <th pSortableColumn="fechaCorte" style="width:20%">
+                        <th pSortableColumn="fechaCorte">
                             Fecha Corte <p-sortIcon field="fechaCorte" />
                         </th>
-                        <th pSortableColumn="actualizadoEl" style="width:20%">
+                        <th pSortableColumn="actualizadoEl">
                             Fecha Actualización <p-sortIcon field="actualizadoEl" />
                         </th>
                     </tr>
