--- a/front/src/app/components/private/admin/components/info-upload/info-upload.component.html
+++ b/front/src/app/components/private/admin/components/info-upload/info-upload.component.html
@@ -1,27 +1,34 @@
 <p-toast></p-toast>
 <div class="container mt-5">
     <h1>Cargue de Archivos planos</h1>
+
     <h5>Cargar saldos créditos vigentes</h5>
     <div class="input-group mb-3">
-        <input type="file" class="form-control" (change)="onFileSelected($event, 'credit')" id="inputGroupFile04"
-            aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-        <button class="btn btn-outline-secondary" type="button" (click)="onFileUpload('credit')"
-            [disabled]="!selectedFiles['credit']" id="inputGroupFileAddon04">Cargar Archivo</button>
+        <input type="file" class="form-control" (change)="onFileSelected($event, 'credit')" aria-label="Upload">
+        <button class="btn btn-outline-secondary" type="button" (click)="onFileUpload('credit')" 
+            [disabled]="!selectedFiles['credit']">Cargar Archivo</button>
+    </div>
+    <div class="progress mb-3">
+        <div class="progress-bar" role="progressbar" [style.width.%]="progress['credit']">{{ progress['credit'] }}%</div>
     </div>
 
     <h5>Cargar saldos ahorros vigentes</h5>
     <div class="input-group mb-3">
-        <input type="file" class="form-control" (change)="onFileSelected($event, 'saving')" id="inputGroupFile04"
-            aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+        <input type="file" class="form-control" (change)="onFileSelected($event, 'saving')" aria-label="Upload">
         <button class="btn btn-outline-secondary" type="button" (click)="onFileUpload('saving')"
-            [disabled]="!selectedFiles['saving']" id="inputGroupFileAddon04">Cargar Archivo</button>
+            [disabled]="!selectedFiles['saving']">Cargar Archivo</button>
+    </div>
+    <div class="progress mb-3">
+        <div class="progress-bar" role="progressbar" [style.width.%]="progress['saving']">{{ progress['saving'] }}%</div>
     </div>
 
     <h5>Cargar montos máximos de ahorro</h5>
-    <div class="input-group">
-        <input type="file" class="form-control" (change)="onFileSelected($event, 'maxAmount')" id="inputGroupFile04"
-            aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+    <div class="input-group mb-3">
+        <input type="file" class="form-control" (change)="onFileSelected($event, 'maxAmount')" aria-label="Upload">
         <button class="btn btn-outline-secondary" type="button" (click)="onFileUpload('maxAmount')"
-            [disabled]="!selectedFiles['maxAmount']" id="inputGroupFileAddon04">Cargar Archivo</button>
+            [disabled]="!selectedFiles['maxAmount']">Cargar Archivo</button>
+    </div>
+    <div class="progress mb-3">
+        <div class="progress-bar" role="progressbar" [style.width.%]="progress['maxAmount']">{{ progress['maxAmount'] }}%</div>
     </div>
 </div>
