--- a/front/src/app/components/private/admin/components/info-upload/info-upload.component.css
+++ b/front/src/app/components/private/admin/components/info-upload/info-upload.component.css
@@ -1,12 +1,20 @@
 .progress {
+    position: relative;
     height: 20px;
     background-color: #f3f3f3;
 }
 
 .progress-bar {
-    background-color: #007bff;
-    color: white;
+    background-color: rgba(255,214,16,1);
     height: 100%;
+}
+
+.progress-text {
+    position: absolute;
+    width: 100%;
     text-align: center;
+    top: 0;
+    left: 0;
     line-height: 20px;
+    color: black;
 }
