Fix user forms to create

--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="card">
   <p-table
       #dt2
@@ -124,10 +125,10 @@
               <label for="segundoNombre" class="form-label">Segundo Nombre</label>
               <input type="text" id="segundoNombre" class="form-control" formControlName="segundoNombre" placeholder="Escribe el segundo nombre"/>
             </div>
-            <div class="col-md-8">
+            <!--<div class="col-md-8">
               <label for="usuario" class="form-label">Usuario</label>
               <input type="text" id="usuario" class="form-control" placeholder="nombre.apellido" formControlName="usuario"/>
-            </div>
+            </div>-->
             <!--<div class="col-md-4">
               <label for="id_rol" class="form-label">Rol</label>
               <select id="id_rol" class="form-select" formControlName="id_rol">
