Add user settings

--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -49,5 +49,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Card de Ajustes -->
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="card shadow text-center h-100">
+                <h4 class="card-header">
+                    Ajustes
+                </h4>
+                <div class="card-body ">
+                    <h5 class="card-title">Cambiar contraseña</h5>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/settings">Ir a los ajustes de la cuenta</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
