--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -147,7 +147,7 @@
           <input formControlName="direccionResidencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="aniosAntigVivienda" class="form-label">Años de antigüedad en la vivienda de residencia</label>
+          <label for="duracionAntigVivienda" class="form-label">Antigüedad en la vivienda de residencia</label>
           <div class="input-group mb-3">
             <input type="number" class="form-control" formControlName="duracionAntigVivienda">
             <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigVivienda">
@@ -266,8 +266,15 @@
           <input formControlName="jefeInmediato" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="aniosAntigEmpresa" class="form-label">Años de antigüedad en la empresa</label>
-          <input formControlName="aniosAntigEmpresa" type="number" class="form-control" />
+          <label for="duracionAntigEmpresa" class="form-label">Antigüedad en la empresa</label>
+          <div class="input-group mb-3">
+            <input type="number" class="form-control" formControlName="duracionAntigEmpresa">
+            <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigEmpresa">
+              <option value="" selected disabled>Seleccione Periodo...</option>
+              <option value="Años">Años</option>
+              <option value="Meses">Meses</option>
+            </select>
+          </div>
         </div>
         <!--<div class="col-md-6">
           <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
