Fix saving lines in saving request component

--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -200,7 +200,7 @@
           <input formControlName="correoElectronico" type="email" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="telefono" class="form-label">Número de teléfono</label>
+          <label for="telefono" class="form-label">Número de teléfono (Opcional)</label>
           <input formControlName="telefono" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
@@ -208,7 +208,7 @@
           <input formControlName="celular" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
-          <label for="telefonoOficina" class="form-label">Número de teléfono de oficina</label>
+          <label for="telefonoOficina" class="form-label">Número de teléfono de oficina (Opcional)</label>
           <input formControlName="telefonoOficina" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
       </div>
