--- a/front/src/app/components/private/user/request/request-saving/info-request-saving/info-request-saving.component.html
+++ b/front/src/app/components/private/user/request/request-saving/info-request-saving/info-request-saving.component.html
@@ -77,7 +77,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="telefono" class="form-label">Número de teléfono</label>
+          <label for="telefono" class="form-label">Número de teléfono (Opcional)</label>
           <input
             formControlName="telefono"
             type="text"
