--- a/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
@@ -3,7 +3,7 @@
   <h1>Solicitud de Crédito</h1>
   <p>Este es el módulo de solicitud de crédito. Primero, complete o actualice su información según sea necesario. Después de hacerlo, proceda a solicitar el crédito.</p>
   <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
-    <div class="mt-5" *ngIf="isSectionVisible(0)">
+    <div class="mt-5 mb-5" *ngIf="isSectionVisible(0)">
       <h5>Información Familiar</h5>
       <p>Por favor, agregue o asegúrese de tener agregado a su cónyuge. Si no tiene cónyuge, no es necesario agregar nada.</p>
       <app-family-information></app-family-information>
@@ -178,7 +178,7 @@
     </div>
 
     <!-- Section 3 -->
-    <div *ngIf="isSectionVisible(2)">
+    <div class="mb-5" *ngIf="isSectionVisible(2)">
       <h5 class="mt-3">Información de Residencia</h5>
       <div class="card">
         <div class="card-body">
@@ -254,14 +254,15 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="aniosAntigVivienda" class="form-label"
-                >Años de antigüedad en la vivienda de residencia</label
-              >
-              <input
-                formControlName="aniosAntigVivienda"
-                type="number"
-                class="form-control"
-              />
+              <label for="duracionAntigVivienda" class="form-label">Antigüedad en la empresa</label>
+              <div class="input-group mb-3">
+                <input type="number" class="form-control" formControlName="duracionAntigVivienda">
+                <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigVivienda">
+                  <option value="" selected disabled>Seleccione Periodo...</option>
+                  <option value="Años">Años</option>
+                  <option value="Meses">Meses</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
@@ -450,14 +451,15 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="aniosAntigEmpresa" class="form-label"
-                >Años de antigüedad en la empresa</label
-              >
-              <input
-                formControlName="aniosAntigEmpresa"
-                type="number"
-                class="form-control"
-              />
+              <label for="duracionAntigEmpresa" class="form-label">Antigüedad en la empresa</label>
+              <div class="input-group mb-3">
+                <input type="number" class="form-control" formControlName="duracionAntigEmpresa">
+                <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigEmpresa">
+                  <option value="" selected disabled>Seleccione Periodo...</option>
+                  <option value="Años">Años</option>
+                  <option value="Meses">Meses</option>
+                </select>
+              </div>
             </div>
             <!--<div class="col-md-6">
                   <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
