Add strength bar in change password

--- a/front/src/app/components/private/user/user-settings/user-settings.component.css
+++ b/front/src/app/components/private/user/user-settings/user-settings.component.css
@@ -11,3 +11,31 @@
     font-size: 1.2rem;
     color: #6c757d;
   }  
+  .password-strength-bar {
+    height: 10px;
+    background-color: #e0e0e0;
+    margin-top: 5px;
+    width: 100%;
+    border-radius: 5px;
+  }
+  
+  .strength-bar {
+    height: 100%;
+    border-radius: 5px;
+  }
+  
+  .low {
+    width: 10%;
+    background-color: red;
+  }
+  
+  .medium {
+    width: 66%;
+    background-color: orange;
+  }
+  
+  .strong {
+    width: 100%;
+    background-color: green;
+  }
+  
