--- a/front/src/app/components/private/user/user-settings/user-settings.component.html
+++ b/front/src/app/components/private/user/user-settings/user-settings.component.html
@@ -1,8 +1,9 @@
 <p-toast></p-toast>
 <div class="container">
-    <h1 class="mt-5 text-center">Cambiar Contraseña</h1>
+    <h1 class="mt-5 text-center">Cambiar Contraseña <i class="bi bi-lock-fill"></i></h1>
 
     <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+        <!-- Contraseña actual -->
         <div class="mb-3 position-relative">
             <label for="currentPassword" class="form-label">Contraseña Actual</label>
             <div class="password-container">
@@ -12,16 +13,14 @@
                   class="form-control"
                   formControlName="currentPassword"
                   placeholder="Introduce tu contraseña actual"/>
-                <i
-                  class="pi password-toggle-icon"
-                  [ngClass]="showCurrentPassword ? 'pi-eye-slash' : 'pi-eye'"
-                  (click)="togglePasswordVisibility('current')"></i>
+                <i class="pi password-toggle-icon" [ngClass]="showCurrentPassword ? 'pi-eye-slash' : 'pi-eye'" (click)="togglePasswordVisibility('current')"></i>
             </div>
             <div *ngIf="changePasswordForm.get('currentPassword')?.invalid && changePasswordForm.get('currentPassword')?.touched">
                 <small class="text-danger">La contraseña actual es requerida</small>
             </div>
         </div>
 
+        <!-- Nueva contraseña -->
         <div class="mb-3 position-relative">
             <label for="newPassword" class="form-label">Nueva Contraseña</label>
             <div class="password-container">
@@ -30,17 +29,21 @@
                   id="newPassword"
                   class="form-control"
                   formControlName="newPassword"
-                  placeholder="Introduce tu nueva contraseña"/>
-                <i
-                  class="pi password-toggle-icon"
-                  [ngClass]="showNewPassword ? 'pi-eye-slash' : 'pi-eye'"
-                  (click)="togglePasswordVisibility('new')"></i>
+                  placeholder="Introduce tu nueva contraseña"
+                  (input)="evaluatePasswordStrength()"/>
+                <i class="pi password-toggle-icon" [ngClass]="showNewPassword ? 'pi-eye-slash' : 'pi-eye'" (click)="togglePasswordVisibility('new')"></i>
             </div>
             <div *ngIf="changePasswordForm.get('newPassword')?.invalid && changePasswordForm.get('newPassword')?.touched">
-                <small class="text-danger">La nueva contraseña es requerida y debe tener al menos 6 caracteres</small>
+                <small class="text-danger">La nueva contraseña debe tener al menos 6 caracteres, incluir una letra y un número.</small>
+            </div>
+
+            <!-- Barra de seguridad de la contraseña -->
+            <div class="password-strength-bar">
+                <div class="strength-bar" [ngClass]="passwordStrengthClass"></div>
             </div>
         </div>
 
+        <!-- Confirmar contraseña -->
         <div class="mb-3 position-relative">
             <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
             <div class="password-container">
@@ -50,10 +53,7 @@
                   class="form-control"
                   formControlName="confirmPassword"
                   placeholder="Confirma tu nueva contraseña"/>
-                <i
-                  class="pi password-toggle-icon"
-                  [ngClass]="showNewPassword ? 'pi-eye-slash' : 'pi-eye'"
-                  (click)="togglePasswordVisibility('new')"></i>
+                <i class="pi password-toggle-icon" [ngClass]="showNewPassword ? 'pi-eye-slash' : 'pi-eye'" (click)="togglePasswordVisibility('new')"></i>
             </div>
             <div *ngIf="changePasswordForm.get('confirmPassword')?.invalid && changePasswordForm.get('confirmPassword')?.touched">
                 <small class="text-danger">Debes confirmar la nueva contraseña</small>
