--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -1,4 +1,6 @@
-<button class="btn btn-primary d-xl-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Menú</button>
+<div class="header-mobile p-2">
+  <button class="btn btn-primary d-xl-none button-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive"><i class="bi bi-list burguer fs-2"></i></button>
+</div>
 
 <!-- Menú offcanvas para móviles -->
 <div class="offcanvas offcanvas-start d-xl-none" tabindex="-1" id="offcanvasResponsive"
