Fix responsive in mobile sidebar

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="header-mobile p-2">
-  <button class="btn btn-primary d-xl-none button-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive"><i class="bi bi-list burguer fs-2"></i></button>
+<div class="header-mobile">
+  <button class="btn btn-primary d-xl-none button-mobile m-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive"><i class="bi bi-list burguer fs-2"></i></button>
 </div>
 
 <!-- Menú offcanvas para móviles -->
